-
Bug
-
Resolution: Done
-
P2: Important
-
5.5.0
-
None
-
60cdc6035d25441fd99a7d341892ee2fb1002741
The default implementation is a no-op. For linuxfb this got fixed in QTBUG-44465. eglfs needs an implementation too, even if it's inefficient.
- relates to
-
QTBUG-34976 Missing QScreen::grabWindow() support
-
- Open
-
-
QTBUG-44465 QLinuxFbScreen::grabWindow() not implemented
-
- Closed
-
| For Gerrit Dashboard: QTBUG-44937 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 108614,2 | Add support for grabWindow() on eglfs with widgets | 5.5 | qt/qtbase | Status: MERGED | +2 | 0 |