Add support for grabWindow() on eglfs with widgets

For real OpenGL content it is still not supported because we have no reliable way
to read back the contents at arbitrary times. Applications should rather use
QQuickWindow::grabWindow() in that case.

[ChangeLog][QtGui] Support for QScreen::grabWindow() is now available on
embedded platforms (eglfs, linuxfb).

Task-number: QTBUG-44937
Change-Id: I4ad046062782c160f5bb9f8f2a2fe82f2e7394cc
Reviewed-by: Andy Nichols <andy.nichols@theqtcompany.com>

cregit: 60cdc6035d25441fd99a7d341892ee2fb1002741 https://github.com/qt/qtbase/commit/60cdc6035d25441fd99a7d341892ee2fb1002741